--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Mohan Boddu | Built with ❤️</p>
+      <p>© 2025 Teja Bokka | Built with ❤️</p>
     </footer>
 
     <script src="script.js"></script>
